09.mar (la)
      - fix playback start position when repeat in the score
25.feb (tb)
      - adding Lithuanian (mscore_lt.ts) language
19.feb (db)
      - copy editing for demo scores (usuariomuse)
13.feb (db)
      - copy editing for demo scores (usuariomuse)
03.feb (la)
      - fix #9040: Dragging note horizontally removes accidental permanently
02.feb (la)
      - improve MusicXML import of clefs
      - Changing velocity and on/off offsets for a group of selected notes (miwarre patch)
01.feb (la)
      - fix #8974: Rest entry shortcut does not work in Voice 2
      - fix #9002: Reset Position doesn't affect tuplet bracket
      - fix #4975: Parts should have multi-measure rests by default
      - Update MuseScore.com plugin, better wording & worflow, 
      easy signout, signout on exit
30.jan (db)
      - fixed vocal range for bartione and bass (instruments.xml)
29.jan (ws)
      - minor fix for version compare
25.jan (la)
      - fix #8865: Crash when changing instrument on drumstaff
      - fix regression : colision between accidental bracket and previous note
24.jan (ws)
      - applied patch from Ribet which hopefully fixes #7857
      (lv)
      - fix MusicXML export of bracketed accidentals
       (ws)
      - #8842: add patch from miwarre (bracketed accidentals not saved)
23.jan (lv)
      - MusicXML export: disabled debug printfs
      (db)
      - Adding panning to templates
22.jan (lv)
      - MusicXML import: disabled debug printfs
19.jan (ws)
      - fix #8727: write accidentals with parentheses
18.jan (ws)
      - fix #8763: Tuplet number not spatium dependent
      - fix #8735: Beat corruption in copy paste of partial measure
       (la)
      - fix #6547: File association on Mac. Add bww, cap, sgu, mgu, mid, ove, md, and MusicXML.
17.jan (la)
      - fix #8750: Crashes with system containing only vertical box
      - fix #6736: Preferences Menu disabled in non english. Avoid merging of menus.
16.jan (lv)
      - iotest updates
       (la)