@@ -1868,7 +1868,7 @@ int main(int argc, char* av[])
       if (!useFactorySettings)
             preferences.read();
       else {
-            preferences.soundFont = mscoreGlobalShare + "/sound/TimGM6mb.sf2";
+            preferences.soundFont = mscoreGlobalShare+"/sound/TimGM6mb.sf2";
             }
 
       QSplashScreen* sc = 0;
